// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > should match snapshot when action = delete 1`] = `
<button
  class="button table__button"
  type="button"
>
  <!--v-if-->
   
  <span
    class="sr-only"
  >
    
    
    Ta bort
    
    
  </span>
</button>
`;

exports[`snapshot > should match snapshot when action = modify 1`] = `
<button
  class="button table__button"
  type="button"
>
  <!--v-if-->
   
  <span
    class="sr-only"
  >
    
    
    Ändra
    
    
  </span>
</button>
`;

exports[`snapshot > should match snapshot when both label and icon is used 1`] = `
<button
  class="button table__button"
  type="button"
>
  <f-icon-stub
    class="button__icon"
    library="f"
    name="pen"
  />
   
  
  
  Ändra
  
  
</button>
`;

exports[`snapshot > should match snapshot when only icon is used 1`] = `
<button
  class="button table__button"
  type="button"
>
  <f-icon-stub
    class="button__icon"
    library="f"
    name="pen"
  />
   
  <span
    class="sr-only"
  >
    
    
    Ändra
    
    
  </span>
</button>
`;

exports[`snapshot > should match snapshot when only label is used 1`] = `
<button
  class="button table__button"
  type="button"
>
  <!--v-if-->
   
  
  
  Ändra
  
  
</button>
`;
